--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 </head>
 <body>
     <div class="header">
-        <img src="images/logo.png" alt="Organization Logo" class="logo">
-        <h1 class="title">Organization Contacts</h1>
+        <img src="images/logotipo.png" alt="Organization Logo" class="logo">
+        <h1 class="title">Auto Sarge</h1>
     </div>
     <div class="intro-box">
         <p>
