--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             Feel free to reach out to us by phone or email with any questions or requests.
         </p>
     </div>
+    <h2 style="color: #fafafa; margin-top: 0; margin-bottom: 18px;">Contatos</h2>
     <div class="contact-card">
         <img src="images/jane.jpg" alt="Jane Doe">
         <div class="contact-info">
