--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
     </div>
     <div class="intro-box">
         <p>
-            Welcome to our organization! We are committed to providing excellent services and support. 
-            Below you can find the contact details for key members of our team. 
-            Feel free to reach out to us by phone or email with any questions or requests.
+            Autosarge uma empresa que se dedica à mais de 30 anos ao comercio de viaturas usadas, 
+            onde o foco é o atendimento de excelência e a completa satisfação do cliente. 
+            Não hesite em nos contactar a saber do nosso stock e caso pretenda somente vender a sua viatura, 
+            podemos o ajudar em aconselhamento especializado.
         </p>
     </div>
     <h2 style="color: #fafafa; margin-top: 0; margin-bottom: 18px;">Contatos</h2>
