--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Organization Contacts</title>
+    <title>Auto Sarge</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
@@ -32,7 +32,7 @@
         }
         .intro-box {
             background: #222;
-            border-left: 6px solid #2196f3;
+            border-left: 6px solid #f44336;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.22);
             padding: 24px;
