--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             border: 1px solid #333;
         }
         .title {
-            font-size: 2em;
+            font-size: 3.5em;
             margin: 0;
             color: #fafafa;
         }
@@ -37,36 +37,19 @@
             box-shadow: 0 2px 8px rgba(0,0,0,0.22);
             padding: 24px;
             margin-bottom: 32px;
+            font-size: 1.35em;
         }
-        .contact-card {
+        .contact-simple {
             background: #181818;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.25);
-            padding: 20px 24px;
+            padding: 22px 26px;
             margin-bottom: 24px;
-            display: flex;
-            align-items: center;
+            color: #fafafa;
+            font-size: 1.25em;
         }
-        .contact-card img {
-            width: 64px;
-            height: 64px;
-            object-fit: cover;
-            border-radius: 50%;
-            margin-right: 18px;
-            border: 2px solid #222;
-            background: #222;
-        }
-        .contact-info {
-            flex: 1;
-        }
-        .contact-info h2 {
-            margin: 0 0 8px;
-            font-size: 1.15em;
-            color: #fff;
-        }
-        .contact-info p {
-            margin: 4px 0;
-            color: #e0e0e0;
+        .contact-simple p {
+            margin: 10px 0;
         }
         a {
             color: #2196f3;
@@ -96,23 +79,10 @@
         </p>
     </div>
     <h2 style="color: #fafafa; margin-top: 0; margin-bottom: 18px;">Contatos</h2>
-    <div class="contact-card">
-        <img src="images/jane.jpg" alt="Jane Doe">
-        <div class="contact-info">
-            <h2>Jane Doe</h2>
-            <p><strong>Role:</strong> Director</p>
-            <p><strong>Email:</strong> <a href="mailto:jane@example.com">jane@example.com</a></p>
-            <p><strong>Phone:</strong> <a href="tel:+1234567890">+123 456 7890</a></p>
-        </div>
-    </div>
-    <div class="contact-card">
-        <img src="images/john.jpg" alt="John Smith">
-        <div class="contact-info">
-            <h2>John Smith</h2>
-            <p><strong>Role:</strong> Manager</p>
-            <p><strong>Email:</strong> <a href="mailto:john@example.com">john@example.com</a></p>
-            <p><strong>Phone:</strong> <a href="tel:+1235551234">+123 555 1234</a></p>
-        </div>
+    <div class="contact-simple">
+        <p><strong>Telemóvel 1:</strong> <a href="tel:+1234567890">+123 456 7890</a></p>
+        <p><strong>Telemóvel 2:</strong> <a href="tel:+1235551234">+123 555 1234</a></p>
+        <p><strong>Email:</strong> <a href="mailto:info@autosarge.com">info@autosarge.com</a></p>
     </div>
     <!-- Add more contacts as needed -->
 </body>
