--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     </div>
     <h2 style="color: #fafafa; margin-top: 0; margin-bottom: 18px;">Contatos</h2>
     <div class="contact-simple">
-        <p><strong>Telemóvel 1:</strong> <a href="tel:+1234567890">+123 456 7890</a></p>
-        <p><strong>Telemóvel 2:</strong> <a href="tel:+1235551234">+123 555 1234</a></p>
-        <p><strong>Email:</strong> <a href="mailto:info@autosarge.com">info@autosarge.com</a></p>
+        <p><strong>Telemóvel 1:</strong> <a href="tel:+1234567890">+351 912 251 080</a></p>
+        <p><strong>Telemóvel 2:</strong> <a href="tel:+1235551234">+351 918 754 848</a></p>
+        <p><strong>Email:</strong> <a href="mailto:info@autosarge.com">autosarge2005@gmail.com</a></p>
     </div>
     <!-- Add more contacts as needed -->
 </body>
