--- a/index.html
+++ b/index.html
@@ -176,6 +176,34 @@
                 </div>
             </div>
         </div>
+        <!-- Added car slot 4 -->
+        <div class="car-card">
+            <a href="https://example.com/car4" target="_blank">
+                <img src="images/car4.jpg" alt="Carro 4">
+            </a>
+            <div class="car-info">
+                <div class="car-title">placeholder:car name</div>
+                <div class="car-details">
+                    Preço: €22,000<br>
+                    Quilometragem: 12,000 km<br>
+                    Cor: Preto
+                </div>
+            </div>
+        </div>
+        <!-- Added car slot 5 -->
+        <div class="car-card">
+            <a href="https://example.com/car5" target="_blank">
+                <img src="images/car5.jpg" alt="Carro 5">
+            </a>
+            <div class="car-info">
+                <div class="car-title">placeholder:car name</div>
+                <div class="car-details">
+                    Preço: €25,000<br>
+                    Quilometragem: 8,500 km<br>
+                    Cor: Cinzento
+                </div>
+            </div>
+        </div>
     </div>
     <!-- Car Showcase Section END -->
     <h2 style="color: #fafafa; margin-top: 0; margin-bottom: 18px;">Contatos</h2>
