--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
     <!-- Car Showcase Section START -->
     <div class="car-showcase">
         <div class="car-card">
-            <a href="https://example.com/car1" target="_blank">
+            <a href="https://www.standvirtual.com/carros/anuncio/ford-fiesta-ver-1-25-trend-ID8PSj6T.html?_gl=1*1rabvrf*_gcl_au*NzgxOTkwMjU2LjE3NTIyNzEzNjU.*_ga*OTkxNTYxNTA0LjE3NTIyNzEzNjU.*_ga_L97YMGPQ5R*czE3NTI5NjA1MzYkbzIkZzAkdDE3NTI5NjA1MzYkajYwJGwwJGgw" target="_blank">
                 <img src="images/car1.jpg" alt="Carro 1">
             </a>
             <div class="car-info">
-                <div class="car-title">placeholder:car name</div>
+                <div class="car-title">Ford Fiesta 1.25 Trend</div>
                 <div class="car-details">
-                    Preço: €20,000<br>
-                    Quilometragem: 15,000 km<br>
-                    Cor: Azul
+                    Preço: 3590€<br>
+                    Quilometragem: 140 677 km<br>
+                    Ano: 2006
                 </div>
             </div>
         </div>
