--- a/index.html
+++ b/index.html
@@ -107,6 +107,19 @@
         a:hover {
             text-decoration: underline;
         }
+        /* Discreet Hint Styles */
+        .click-hint {
+            text-align: center;
+            margin-bottom: 8px;
+        }
+        .click-hint span {
+            color: #fafafa;
+            opacity: 0.68;
+            font-size: 1em;
+            display: inline-flex;
+            align-items: center;
+            gap: 4px;
+        }
         @media (max-width:900px) {
             .car-showcase { flex-direction: column; align-items: center; }
             .car-card { width: 90vw; max-width: 340px; }
@@ -134,11 +147,16 @@
     </div>
     <!-- Stock Subtitle START -->
     <div class="stock-subtitle">Carros no stock</div>
+    <!-- Discreet Hint START -->
+    <div class="click-hint">
+        <span>🔍 Clique numa imagem para ver mais detalhes sobre o carro.</span>
+    </div>
+    <!-- Discreet Hint END -->
     <!-- Stock Subtitle END -->
     <!-- Car Showcase Section START -->
     <div class="car-showcase">
         <div class="car-card">
-            <a href="https://www.standvirtual.com/carros/anuncio/ford-fiesta-ver-1-25-trend-ID8PSj6T.html?_gl=1*1rabvrf*_gcl_au*NzgxOTkwMjU2LjE3NTIyNzEzNjU.*_ga*OTkxNTYxNTA0LjE3NTIyNzEzNjU.*_ga_L97YMGPQ5R*czE3NTI5NjA1MzYkbzIkZzAkdDE3NTI5NjA1MzYkajYwJGwwJGgw" target="_blank">
+            <a href="https://www.standvirtual.com/carros/anuncio/ford-fiesta-ver-1-25-trend-ID8PSj6T.html?_gl=1*1rabvrf*_gcl_au*NzgxOTkwMjU2LjE3NTIyNzEzNjU.*_ga*OTkxNTYxNTA0LjE3NTIyNzEzNjU.*_ga_L97YMG[...]">
                 <img src="images/car1.jpg" alt="Carro 1">
             </a>
             <div class="car-info">
