--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Auto Sarge</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
+    /* Background from your link - subtle dark gradient with pattern */
     body {
       font-family: Arial, sans-serif;
       margin: 40px;
-      background: #111;
+      background: linear-gradient(135deg, #111 0%, #222 100%);
+      background-image: url('https://designergpt.replit.app/assets/texture-7aef4a5a.png'); /* pattern from link */
+      background-repeat: repeat;
       color: #f2f2f2;
     }
 
@@ -38,10 +41,144 @@
       background: #222;
       border-left: 6px solid #f44336;
       border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.22);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.22);
       padding: 24px;
       margin-bottom: 32px;
       font-size: 1.35em;
+    }
+
+    /* Carousel container */
+    .carousel-container {
+      position: relative;
+      max-width: 800px;
+      margin: 2rem auto;
+      background: #222;
+      border-radius: 12px;
+      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.6);
+      overflow: hidden;
+    }
+
+    /* Carousel items */
+    .carousel-slide {
+      display: none;
+      text-align: center;
+      padding: 1rem;
+      color: #fafafa;
+    }
+
+    .carousel-slide.active {
+      display: block;
+    }
+
+    .carousel-slide img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: transform 0.2s, box-shadow 0.2s;
+      margin-bottom: 1rem;
+    }
+
+    .carousel-slide img:hover {
+      transform: scale(1.04);
+      box-shadow: 0 0 10px #2196f3;
+    }
+
+    .car-title {
+      font-size: 1.4rem;
+      font-weight: bold;
+      margin-bottom: 0.4rem;
+      color: #fafafa;
+    }
+
+    .car-price {
+      font-size: 1.8em;
+      font-weight: bold;
+      color: #ffffff;
+      background: #181818;
+      border-radius: 6px;
+      padding: 6px 20px;
+      box-shadow: 0 2px 8px rgba(255, 255, 255, 0.15);
+      margin-bottom: 0.8em;
+      display: inline-block;
+    }
+
+    .car-details {
+      font-size: 1.1rem;
+      background: #232323;
+      border-radius: 8px;
+      padding: 14px 24px;
+      font-weight: 500;
+      box-shadow: 0 1px 6px rgba(33, 150, 243, 0.09);
+      letter-spacing: 0.5px;
+      text-align: left;
+      color: #d3d6db;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+
+    .car-details span {
+      display: block;
+      margin: 6px 0;
+      font-size: 1.1em;
+    }
+
+    .car-details strong {
+      color: #b0b3b8;
+      font-weight: bold;
+      margin-right: 6px;
+    }
+
+    /* Carousel arrows */
+    .carousel-arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(33, 150, 243, 0.7);
+      border: none;
+      color: #fff;
+      font-size: 1.6rem;
+      padding: 8px 14px;
+      border-radius: 50%;
+      cursor: pointer;
+      user-select: none;
+      transition: background 0.3s;
+      box-shadow: 0 0 6px rgba(33, 150, 243, 0.9);
+    }
+
+    .carousel-arrow:hover {
+      background: #2196f3;
+    }
+
+    .carousel-arrow.left {
+      left: 12px;
+    }
+
+    .carousel-arrow.right {
+      right: 12px;
+    }
+
+    .stock-subtitle {
+      color: #fafafa;
+      font-size: 2em;
+      margin: 0 0 22px 0;
+      text-align: center;
+      font-weight: 600;
+      letter-spacing: 1px;
+    }
+
+    .click-hint {
+      text-align: center;
+      margin-bottom: 8px;
+    }
+
+    .click-hint span {
+      color: #fafafa;
+      opacity: 0.68;
+      font-size: 1em;
+      display: inline-flex;
+      align-items: center;
+      gap: 4px;
     }
 
     .car-showcase {
@@ -58,7 +195,7 @@
       padding: 1rem;
       text-align: center;
       background: #222;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.18);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.18);
     }
 
     .car-card img {
@@ -78,74 +215,6 @@
       margin-top: 1rem;
     }
 
-    .car-title {
-      font-size: 1.2rem;
-      font-weight: bold;
-      color: #fafafa;
-      margin-bottom: 0.5rem;
-    }
-
-    .car-price {
-      display: inline-block;
-      font-size: 1.7em;
-      font-weight: bold;
-      color: #ffffff;
-      margin-bottom: 0.7em;
-      background: #181818;
-      border-radius: 6px;
-      padding: 4px 16px;
-      box-shadow: 0 2px 8px rgba(255,255,255,0.15);
-    }
-
-    .car-details {
-      font-size: 1rem;
-      margin-top: 0.7em;
-      display: inline-block;
-      background: #232323;
-      border-radius: 8px;
-      padding: 10px 18px;
-      font-weight: 500;
-      box-shadow: 0 1px 6px rgba(33,150,243,0.09);
-      letter-spacing: 0.5px;
-      text-align: left;
-      color: #d3d6db;
-    }
-
-    .car-details span {
-      display: block;
-      margin: 5px 0;
-      font-size: 1.04em;
-    }
-
-    .car-details strong {
-      color: #b0b3b8;
-      font-weight: bold;
-      margin-right: 4px;
-    }
-
-    .stock-subtitle {
-      color: #fafafa;
-      font-size: 2em;
-      margin: 0 0 22px 0;
-      text-align: center;
-      font-weight: 600;
-      letter-spacing: 1px;
-    }
-
-    .contact-simple {
-      background: #181818;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.25);
-      padding: 22px 26px;
-      margin-bottom: 24px;
-      color: #fafafa;
-      font-size: 1.25em;
-    }
-
-    .contact-simple p {
-      margin: 10px 0;
-    }
-
     a {
       color: #2196f3;
       text-decoration: none;
@@ -155,45 +224,100 @@
       text-decoration: underline;
     }
 
-    .click-hint {
-      text-align: center;
-      margin-bottom: 8px;
+    @media (max-width: 900px) {
+      .car-showcase {
+        grid-template-columns: 1fr;
+      }
     }
 
-    .click-hint span {
-      color: #fafafa;
-      opacity: 0.68;
-      font-size: 1em;
-      display: inline-flex;
-      align-items: center;
-      gap: 4px;
-    }
-
-    @media (max-width:900px) {
-      .car-showcase { grid-template-columns: 1fr; }
-    }
-
-    @media (max-width:600px) {
-      body { margin: 12px; }
-      .header { flex-direction: column; align-items: flex-start; }
-      .logo { margin-bottom: 12px; margin-right: 0; }
-      .car-showcase { gap: 1rem; }
+    @media (max-width: 600px) {
+      body {
+        margin: 12px;
+      }
+      .header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .logo {
+        margin-bottom: 12px;
+        margin-right: 0;
+      }
+      .car-showcase {
+        gap: 1rem;
+      }
     }
   </style>
 </head>
 <body>
   <div class="header">
-    <img src="images/logo.png" alt="Organization Logo" class="logo">
+    <img src="images/logo.png" alt="Organization Logo" class="logo" />
     <h1 class="title">Auto Sarge</h1>
   </div>
 
   <div class="intro-box">
     <p>
-      Autosarge uma empresa que se dedica à mais de 30 anos ao comercio de viaturas usadas, 
-      onde o foco é o atendimento de excelência e a completa satisfação do cliente. 
-      Não hesite em nos contactar a saber do nosso stock e caso pretenda somente vender a sua viatura, 
+      Autosarge uma empresa que se dedica à mais de 30 anos ao comercio de viaturas usadas,
+      onde o foco é o atendimento de excelência e a completa satisfação do cliente.
+      Não hesite em nos contactar a saber do nosso stock e caso pretenda somente vender a sua viatura,
       podemos o ajudar em aconselhamento especializado.
     </p>
+  </div>
+
+  <!-- Carousel here -->
+  <div class="carousel-container" aria-label="Carros em destaque">
+    <!-- Each slide is one car -->
+    <div class="carousel-slide active">
+      <a href="#"><img src="images/car1.jpg" alt="Ford Fiesta 1.25 Trend" /></a>
+      <div class="car-title">Ford Fiesta 1.25 Trend</div>
+      <div class="car-price">3.590€</div>
+      <div class="car-details">
+        <span><strong>Quilometragem:</strong> 140 677 km</span>
+        <span><strong>Ano:</strong> 2006</span>
+      </div>
+    </div>
+
+    <div class="carousel-slide">
+      <a href="#"><img src="images/car2.jpg" alt="Carro 2" /></a>
+      <div class="car-title">placeholder:car name</div>
+      <div class="car-price">€18,000</div>
+      <div class="car-details">
+        <span><strong>Quilometragem:</strong> 10,000 km</span>
+        <span><strong>Cor:</strong> Vermelho</span>
+      </div>
+    </div>
+
+    <div class="carousel-slide">
+      <a href="#"><img src="images/car3.jpg" alt="Carro 3" /></a>
+      <div class="car-title">placeholder:car name</div>
+      <div class="car-price">€15,000</div>
+      <div class="car-details">
+        <span><strong>Quilometragem:</strong> 25,000 km</span>
+        <span><strong>Cor:</strong> Branco</span>
+      </div>
+    </div>
+
+    <div class="carousel-slide">
+      <a href="#"><img src="images/car4.jpg" alt="Carro 4" /></a>
+      <div class="car-title">placeholder:car name</div>
+      <div class="car-price">€22,000</div>
+      <div class="car-details">
+        <span><strong>Quilometragem:</strong> 12,000 km</span>
+        <span><strong>Cor:</strong> Preto</span>
+      </div>
+    </div>
+
+    <div class="carousel-slide">
+      <a href="#"><img src="images/car5.jpg" alt="Carro 5" /></a>
+      <div class="car-title">placeholder:car name</div>
+      <div class="car-price">€25,000</div>
+      <div class="car-details">
+        <span><strong>Quilometragem:</strong> 8,500 km</span>
+        <span><strong>Cor:</strong> Cinzento</span>
+      </div>
+    </div>
+
+    <button class="carousel-arrow left" aria-label="Previous Car">&#10094;</button>
+    <button class="carousel-arrow right" aria-label="Next Car">&#10095;</button>
   </div>
 
   <div class="stock-subtitle">Carros no stock</div>
@@ -203,18 +327,106 @@
   </div>
 
   <div class="car-showcase">
-    <!-- Existing cars (5) -->
-    <div class="car-card"><a href="#"><img src="images/car1.jpg" alt="Carro 1"></a><div class="car-info"><div class="car-title">Ford Fiesta 1.25 Trend</div><span class="car-price">3.590€</span><div class="car-details"><span><strong>Quilometragem:</strong> 140 677 km</span><span><strong>Ano:</strong> 2006</span></div></div></div>
-    <div class="car-card"><a href="#"><img src="images/car2.jpg" alt="Carro 2"></a><div class="car-info"><div class="car-title">placeholder:car name</div><span class="car-price">€18,000</span><div class="car-details"><span><strong>Quilometragem:</strong> 10,000 km</span><span><strong>Cor:</strong> Vermelho</span></div></div></div>
-    <div class="car-card"><a href="#"><img src="images/car3.jpg" alt="Carro 3"></a><div class="car-info"><div class="car-title">placeholder:car name</div><span class="car-price">€15,000</span><div class="car-details"><span><strong>Quilometragem:</strong> 25,000 km</span><span><strong>Cor:</strong> Branco</span></div></div></div>
-    <div class="car-card"><a href="#"><img src="images/car4.jpg" alt="Carro 4"></a><div class="car-info"><div class="car-title">placeholder:car name</div><span class="car-price">€22,000</span><div class="car-details"><span><strong>Quilometragem:</strong> 12,000 km</span><span><strong>Cor:</strong> Preto</span></div></div></div>
-    <div class="car-card"><a href="#"><img src="images/car5.jpg" alt="Carro 5"></a><div class="car-info"><div class="car-title">placeholder:car name</div><span class="car-price">€25,000</span><div class="car-details"><span><strong>Quilometragem:</strong> 8,500 km</span><span><strong>Cor:</strong> Cinzento</span></div></div></div>
-
-    <!-- New cars (4) -->
-    <div class="car-card"><a href="#"><img src="images/car6.jpg" alt="Carro 6"></a><div class="car-info"><div class="car-title">placeholder:car name</div><span class="car-price">€19,500</span><div class="car-details"><span><strong>Quilometragem:</strong> 18,000 km</span><span><strong>Cor:</strong> Azul</span></div></div></div>
-    <div class="car-card"><a href="#"><img src="images/car7.jpg" alt="Carro 7"></a><div class="car-info"><div class="car-title">placeholder:car name</div><span class="car-price">€14,000</span><div class="car-details"><span><strong>Quilometragem:</strong> 40,000 km</span><span><strong>Cor:</strong> Verde</span></div></div></div>
-    <div class="car-card"><a href="#"><img src="images/car8.jpg" alt="Carro 8"></a><div class="car-info"><div class="car-title">placeholder:car name</div><span class="car-price">€21,000</span><div class="car-details"><span><strong>Quilometragem:</strong> 9,000 km</span><span><strong>Cor:</strong> Branco</span></div></div></div>
-    <div class="car-card"><a href="#"><img src="images/car9.jpg" alt="Carro 9"></a><div class="car-info"><div class="car-title">placeholder:car name</div><span class="car-price">€11,000</span><div class="car-details"><span><strong>Quilometragem:</strong> 60,000 km</span><span><strong>Cor:</strong> Preto</span></div></div></div>
+    <!-- Your existing grid of cars (all 9 cars) -->
+    <div class="car-card">
+      <a href="#"><img src="images/car1.jpg" alt="Carro 1" /></a>
+      <div class="car-info">
+        <div class="car-title">Ford Fiesta 1.25 Trend</div>
+        <span class="car-price">3.590€</span>
+        <div class="car-details">
+          <span><strong>Quilometragem:</strong> 140 677 km</span>
+          <span><strong>Ano:</strong> 2006</span>
+        </div>
+      </div>
+    </div>
+    <div class="car-card">
+      <a href="#"><img src="images/car2.jpg" alt="Carro 2" /></a>
+      <div class="car-info">
+        <div class="car-title">placeholder:car name</div>
+        <span class="car-price">€18,000</span>
+        <div class="car-details">
+          <span><strong>Quilometragem:</strong> 10,000 km</span>
+          <span><strong>Cor:</strong> Vermelho</span>
+        </div>
+      </div>
+    </div>
+    <div class="car-card">
+      <a href="#"><img src="images/car3.jpg" alt="Carro 3" /></a>
+      <div class="car-info">
+        <div class="car-title">placeholder:car name</div>
+        <span class="car-price">€15,000</span>
+        <div class="car-details">
+          <span><strong>Quilometragem:</strong> 25,000 km</span>
+          <span><strong>Cor:</strong> Branco</span>
+        </div>
+      </div>
+    </div>
+    <div class="car-card">
+      <a href="#"><img src="images/car4.jpg" alt="Carro 4" /></a>
+      <div class="car-info">
+        <div class="car-title">placeholder:car name</div>
+        <span class="car-price">€22,000</span>
+        <div class="car-details">
+          <span><strong>Quilometragem:</strong> 12,000 km</span>
+          <span><strong>Cor:</strong> Preto</span>
+        </div>
+      </div>
+    </div>
+    <div class="car-card">
+      <a href="#"><img src="images/car5.jpg" alt="Carro 5" /></a>
+      <div class="car-info">
+        <div class="car-title">placeholder:car name</div>
+        <span class="car-price">€25,000</span>
+        <div class="car-details">
+          <span><strong>Quilometragem:</strong> 8,500 km</span>
+          <span><strong>Cor:</strong> Cinzento</span>
+        </div>
+      </div>
+    </div>
+    <div class="car-card">
+      <a href="#"><img src="images/car6.jpg" alt="Carro 6" /></a>
+      <div class="car-info">
+        <div class="car-title">placeholder:car name</div>
+        <span class="car-price">€19,500</span>
+        <div class="car-details">
+          <span><strong>Quilometragem:</strong> 18,000 km</span>
+          <span><strong>Cor:</strong> Azul</span>
+        </div>
+      </div>
+    </div>
+    <div class="car-card">
+      <a href="#"><img src="images/car7.jpg" alt="Carro 7" /></a>
+      <div class="car-info">
+        <div class="car-title">placeholder:car name</div>
+        <span class="car-price">€14,000</span>
+        <div class="car-details">
+          <span><strong>Quilometragem:</strong> 40,000 km</span>
+          <span><strong>Cor:</strong> Verde</span>
+        </div>
+      </div>
+    </div>
+    <div class="car-card">
+      <a href="#"><img src="images/car8.jpg" alt="Carro 8" /></a>
+      <div class="car-info">
+        <div class="car-title">placeholder:car name</div>
+        <span class="car-price">€21,000</span>
+        <div class="car-details">
+          <span><strong>Quilometragem:</strong> 9,000 km</span>
+          <span><strong>Cor:</strong> Branco</span>
+        </div>
+      </div>
+    </div>
+    <div class="car-card">
+      <a href="#"><img src="images/car9.jpg" alt="Carro 9" /></a>
+      <div class="car-info">
+        <div class="car-title">placeholder:car name</div>
+        <span class="car-price">€11,000</span>
+        <div class="car-details">
+          <span><strong>Quilometragem:</strong> 60,000 km</span>
+          <span><strong>Cor:</strong> Preto</span>
+        </div>
+      </div>
+    </div>
   </div>
 
   <h2 style="color: #fafafa; margin-top: 0; margin-bottom: 18px;">Contatos</h2>
@@ -224,5 +436,29 @@
     <p><strong>Telemóvel 2:</strong> <a href="tel:+351918754848">+351 918 754 848</a></p>
     <p><strong>Email:</strong> <a href="mailto:autosarge2005@gmail.com">autosarge2005@gmail.com</a></p>
   </div>
+
+  <script>
+    // Carousel logic
+    const slides = document.querySelectorAll('.carousel-slide');
+    const prevBtn = document.querySelector('.carousel-arrow.left');
+    const nextBtn = document.querySelector('.carousel-arrow.right');
+    let currentIndex = 0;
+
+    function showSlide(index) {
+      slides.forEach((slide, i) => {
+        slide.classList.toggle('active', i === index);
+      });
+    }
+
+    prevBtn.addEventListener('click', () => {
+      currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+      showSlide(currentIndex);
+    });
+
+    nextBtn.addEventListener('click', () => {
+      currentIndex = (currentIndex + 1) % slides.length;
+      showSlide(currentIndex);
+    });
+  </script>
 </body>
 </html>
